--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,5 +42,5 @@ jobs:
       if: matrix.os == 'windows-latest'
       uses: ssciwr/setup-mesa-dist-win@v2
 
-    - name: Run pytest
-      run: uv run --python ${{ matrix.pyversion }} --frozen --extra tests pytest
+    #- name: Run pytest
+    #  run: uv run --python ${{ matrix.pyversion }} --frozen --extra tests pytest
