--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ build-backend = "hatchling.build"
 requires = ["hatchling", "hatch-fancy-pypi-readme"]
 
 [project]
-authors = [{name = "Daniel Panizo", email = "panizofisico@gmail.com"}]
+authors = [{name = "PanoPepino", email = "panizofisico@gmail.com"}]
 classifiers = [
   "Development Status :: 4 - Beta",
   "Programming Language :: Python :: 3.9",
@@ -14,7 +14,7 @@ classifiers = [
   "Operating System :: OS Independent",
 ]
 dependencies = [
-  "manim>=0.19",
+  "manim>=0.18",
   "numpy>=2.0.2",
   "pybtex>=0.23.0",
 ]
@@ -33,8 +33,8 @@ docs = [
 ]
 
 [project.urls]
-Documentation = "Not yet"
-Repository = "Not yet"
+Documentation = "https://panopepino.github.io/beanim/"
+Repository = "https://github.com/PanoPepino/beanim"
 
 [tool.hatch.version]
 path = "src/beanim/__version__.py"
